--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tippyjs/react": "^4.2.6",
     "autoprefixer": "10.4.14",
     "classnames": "^2.3.2",
     "eslint": "8.45.0",
