--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
     "@tippyjs/react": "^4.2.6",
     "autoprefixer": "10.4.14",
     "classnames": "^2.3.2",
